<resources>
    <string name="app_name">Sappi</string>
    <string name="facebook_app_id">327759477647240</string>

    <!-- LoginActivity -->
    <string name="et_email_hint">E-MAIL</string>
    <string name="et_password_hint">PASSWORD</string>
    <string name="btn_login">LOGIN</string>
    <string name="tv_create_account">Don\'t have an account? REGISTER</string>
    <string name="tv_forgot_password">FORGOT YOUR PASSWORD?</string>
    <string name="err_failed_to_log_in">Failed to log in</string>
    <string name="err_email_not_verifyed">Your email is not verified</string>

    <!-- RegisterActivity -->
    <string name="label_register">REGISTER</string>
    <string name="et_name_hint">NAME</string>
    <string name="et_password_confirm_hint">CONFIRM PASSWORD</string>
    <string name="et_phone_hint">PHONE NUMBER *</string>
    <string name="label_required">* required to submit car</string>

    <string name="et_email_error">E-mail required</string>
    <string name="et_password_error">Password required</string>
    <string name="et_name_error">Name required</string>
    <string name="et_password_confirm_error">Confirm your password</string>
    <string name="et_password_dont_match">Passwords don\'t match</string>
    <string name="et_no_user">No user with this e-mail address</string>
    <string name="et_invalid_email_or_password">Invalid e-mail or password</string>
    <string name="et_user_exists">User already exists with this e-mail address</string>
    <string name="et_password_too_weak">The chosen password is too weak</string>
    <string name="inf_verification_email_sent">Verification email sent to</string>
    <string name="err_failed_to_send">Failed to send verification e-mail</string>

    <!-- ForgotPasswordActivity -->
    <string name="err_failed_to_send_reset_email">Failed to send password reset e-mail</string>
    <string name="ing_password_reset_email_sent">Password reset e-mail sent to</string>
    <string name="err_something_went_wrong">Something went wrong, please try again later</string>


    <!--EditProfileStrings-->
    <string name="save_button_text">Save</string>

    <!--ProfileActivityStrings-->
    <string name="edit_button_text">Edit</string>
    <string name="et_no_phone_hint">No phone number</string>

    <!--DrawerItemsStrings-->
    <string name="profile_text">Profile</string>
    <string name="favorites_text">Favorites</string>
    <string name="signout_text">Sign Out</string>


    <!-- ForgotPasswordActivity -->
    <string name="label_forgot_password">FORGOT PASSWORD</string>
    <string name="btn_send">SEND</string>
    <string name="tv_back">BACK</string>
    <string name="toast_email_sent">Email sent!</string>
    <string name="logo">Logo</string>

    <string name="going_txt">Going</string>
    <string name="added_by">Added by</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_home">Home</string>
    <string name="title_cars">Cars</string>
    <string name="title_events">Events</string>
    <string name="text_submit">Submit</string>

    <!--Favorites Strings-->
    <string name="empty_fav">You don\'t have any favorites \!</string>
</resources>
