<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logo"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <TextView
        android:id="@+id/tvLoginLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginStart="3dp"
        android:fontFamily="sans-serif"
        android:text="@string/label_register"
        android:textAllCaps="true"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline4"
        app:layout_constraintRight_toRightOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15"
        tools:layout_editor_absoluteY="25dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/guideline4"
        app:layout_constraintRight_toRightOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginLabel">

        <EditText
            android:focusable="true"
            android:id="@+id/etEmailReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:minLines="1"
            android:textSize="@dimen/et_hint_size"
            android:maxLength="70"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/guideline4"
        app:layout_constraintRight_toRightOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <EditText
            android:focusable="true"
            android:id="@+id/etNameReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_name_hint"
            android:inputType="textCapWords"
            android:maxLength="30"
            android:maxLines="1"
            android:minLines="1"
            android:textSize="@dimen/et_hint_size" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/guideline4"
        app:layout_constraintRight_toRightOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

        <EditText
            android:focusable="true"
            android:id="@+id/etPasswordReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:minLines="1"
            android:textSize="@dimen/et_hint_size"
            android:maxLength="30"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/guideline4"
        app:layout_constraintRight_toRightOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

        <EditText
            android:focusable="true"
            android:id="@+id/etPasswordConfirmReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_password_confirm_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:minLines="1"
            android:textSize="@dimen/et_hint_size"
            android:maxLength="30"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/guideline4"
        app:layout_constraintRight_toRightOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout5">

        <EditText
            android:focusable="true"
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_phone_hint"
            android:inputType="phone"
            android:maxLines="1"
            android:minLines="1"
            android:textSize="@dimen/et_hint_size"
            android:maxLength="13"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tvRequired"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_required"
        android:textAlignment="textStart"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline4"
        app:layout_constraintRight_toRightOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout6" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_button"
        android:text="@string/label_register"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline4"
        app:layout_constraintRight_toRightOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/tvRequired" />
</android.support.constraint.ConstraintLayout>
