<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/forgot_page_img"
    android:theme="@style/ForgotPasswordTheme"
    android:id="@+id/container_forgot_password"
    >

    <ImageView
        android:id="@+id/tvLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/splash_screen_logo"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingLeft="@dimen/logo_padding_left_rigth"
        android:paddingRight="@dimen/logo_padding_left_rigth"
        android:paddingStart="@dimen/logo_padding_left_rigth"
        android:paddingEnd="@dimen/logo_padding_left_rigth"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <TextView
        android:id="@+id/tvForgotPasswordLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginStart="3dp"
        android:text="@string/label_forgot_password"
        android:textSize="15sp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/guideline8"
        app:layout_constraintRight_toLeftOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline8"
        app:layout_constraintRight_toLeftOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPasswordLabel"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite">

        <EditText
            android:id="@+id/etEmailForgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:minLines="1"
            android:textSize="@dimen/et_hint_size"
            android:maxLength="70"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnSendEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="@drawable/button_purple_background"
        android:text="@string/btn_send"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintLeft_toLeftOf="@+id/guideline8"
        app:layout_constraintRight_toLeftOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout8" />
</android.support.constraint.ConstraintLayout>